Fix super tall queue entries
Signed-off-by: Ben Fuller <bfuller@pivotal.io>

--- a/frontend/src/Pong.css
+++ b/frontend/src/Pong.css
@@ -78,7 +78,9 @@ h2 {
 }
 
 .queue-pong-icon {
+  height: 50px;
   width: 50px;
   margin-left: 10px;
+  margin-right: 10px;
   vertical-align: middle;
 }
